[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ship.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/chests.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 7.5 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 112, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Ship" type="Area2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Ship_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Ship_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Ship_body_exited"]
